force-app/main/default/objects/Employee_KRA__c/Employee_KRA__c.object-meta.xml
<CustomObject>
    <label>Employee KRA</label>
    <nameField>
        <displayFormat>KRA-{000000}</displayFormat>
        <label>KRA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee KRA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>