force-app/main/default/objects/Employee_KRA__c/fields/Enhancement_Billing_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Billing_Achieved__c</fullName>
    <formula>(Enhancement_Billing_Achievement__c / Enhancement_Billing_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhancement Billing % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>