force-app/main/default/objects/Employee_KRA__c/fields/Enhancement_Billing_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Billing_Achievement__c</fullName>
    <label>Enhancement Billing Achievement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>