force-app/main/default/objects/Employee_KRA__c/fields/Enhancement_Billing_Target__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Billing_Target__c</fullName>
    <label>Enhancement Billing Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>