force-app/main/default/objects/Employee_KRA__c/fields/FFE_achieved__c.field-meta.xml
<CustomField>
    <fullName>FFE_achieved__c</fullName>
    <formula>( FFE_Achievement__c / FFE_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFE % achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>