force-app/main/default/objects/Employee_KRA__c/fields/FFE_Achievement__c.field-meta.xml
<CustomField>
    <fullName>FFE_Achievement__c</fullName>
    <label>FFE Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>