force-app/main/default/objects/Employee_KRA__c/fields/FFE_MM_Achievement__c.field-meta.xml
<CustomField>
    <fullName>FFE_MM_Achievement__c</fullName>
    <label>FFE MM Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>