force-app/main/default/objects/Employee_KRA__c/fields/FFE_Target__c.field-meta.xml
<CustomField>
    <fullName>FFE_Target__c</fullName>
    <label>FFE Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>