force-app/main/default/objects/Employee_KRA__c/fields/FFF_Achieved__c.field-meta.xml
<CustomField>
    <fullName>FFF_Achieved__c</fullName>
    <formula>( FFF_Achievement__c/FFF_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFF % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>