force-app/main/default/objects/Employee_KRA__c/fields/FFF_BLR_Target__c.field-meta.xml
<CustomField>
    <fullName>FFF_BLR_Target__c</fullName>
    <label>FFF BLR Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>