force-app/main/default/objects/Employee_KRA__c/fields/FFP_achieved__c.field-meta.xml
<CustomField>
    <fullName>FFP_achieved__c</fullName>
    <formula>( FFE_Achievement__c / FFP_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FFP % achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>