force-app/main/default/objects/Employee_KRA__c/fields/FFP_Achievement__c.field-meta.xml
<CustomField>
    <fullName>FFP_Achievement__c</fullName>
    <label>FFP Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>