force-app/main/default/objects/Employee_KRA__c/fields/FFP_BLR_Target__c.field-meta.xml
<CustomField>
    <fullName>FFP_BLR_Target__c</fullName>
    <label>FFP BLR Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>