force-app/main/default/objects/Employee_KRA__c/fields/FFP_MM_Target__c.field-meta.xml
<CustomField>
    <fullName>FFP_MM_Target__c</fullName>
    <label>FFP MM Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>