force-app/main/default/objects/Employee_KRA__c/fields/Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>Financial_Year__c</fullName>
    <label>Financial Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2025-2026</fullName>
            </value>
            <value>
                <fullName>2026-2027</fullName>
            </value>
            <value>
                <fullName>2027-2028</fullName>
            </value>
            <value>
                <fullName>2028-2029</fullName>
            </value>
            <value>
                <fullName>2029-2030</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>