force-app/main/default/objects/Employee_KRA__c/fields/Fresh_Billing_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Fresh_Billing_Achieved__c</fullName>
    <formula>(FFF_Billing_Achievement__c  / FFE_Billing_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fresh Billing % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>