force-app/main/default/objects/Employee_KRA__c/fields/Is_batch_running__c.field-meta.xml
<CustomField>
    <fullName>Is_batch_running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is batch running</label>
    <type>Checkbox</type>
</CustomField>