force-app/main/default/objects/Employee_KRA__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1-April-June</fullName>
            </value>
            <value>
                <fullName>Q2-July-September</fullName>
            </value>
            <value>
                <fullName>Q3-October-December</fullName>
            </value>
            <value>
                <fullName>Q4-January-March</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>