force-app/main/default/objects/Employee_KRA__c/fields/Research_achieved__c.field-meta.xml
<CustomField>
    <fullName>Research_achieved__c</fullName>
    <formula>( Research_Achievement__c / Research_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research % achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>