force-app/main/default/objects/Employee_KRA__c/fields/Research_Billing_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Research_Billing_Achieved__c</fullName>
    <formula>(Surveillance_Billing_Achievement__c / 
Research_Billing_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Research Billing % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>