force-app/main/default/objects/Employee_KRA__c/fields/Research_Billing_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Research_Billing_Achievement__c</fullName>
    <label>Research Billing Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>