force-app/main/default/objects/Employee_KRA__c/fields/Research_Target__c.field-meta.xml
<CustomField>
    <fullName>Research_Target__c</fullName>
    <label>Research Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>