force-app/main/default/objects/Employee_KRA__c/fields/Surveillance_Billing_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Surveillance_Billing_Achieved__c</fullName>
    <formula>( Surveillance_Billing_Achievement__c  /Enhancement_Billing_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surveillance Billing % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>