force-app/main/default/objects/Employee_KRA__c/fields/Surveillance_Billing_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Surveillance_Billing_Achievement__c</fullName>
    <label>Surveillance Billing Achievement</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>