force-app/main/default/objects/Employee_KRA__c/fields/Surveillance_Billing_Target__c.field-meta.xml
<CustomField>
    <fullName>Surveillance_Billing_Target__c</fullName>
    <label>Surveillance Billing Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>