force-app/main/default/objects/Employee_KRA__c/fields/Total_achieved__c.field-meta.xml
<CustomField>
    <fullName>Total_achieved__c</fullName>
    <formula>(Total_Achievement__c / Total_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total % achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>