force-app/main/default/objects/Employee_KRA__c/fields/Total_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Total_Achievement__c</fullName>
    <formula>FFF_Achievement__c +FFP_Achievement__c +FFE_Achievement__c + Research_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>