force-app/main/default/objects/Employee_KRA__c/fields/Total_Billing_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Achieved__c</fullName>
    <formula>Total_Billing_Achievement__c / Total_Billing_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing % Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>