force-app/main/default/objects/Employee_KRA__c/fields/Total_Billing_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Achievement__c</fullName>
    <formula>FFF_Billing_Achievement__c + Enhancement_Billing_Achievement__c + Surveillance_Billing_Achievement__c + Research_Billing_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>