force-app/main/default/objects/Employee_KRA__c/fields/Total_Billing_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Billing_Target__c</fullName>
    <formula>FFE_Billing_Target__c + Enhancement_Billing_Target__c +  Surveillance_Billing_Target__c +Research_Billing_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billing Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>