force-app/main/default/objects/Employee_KRA__c/fields/Total_BLR_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Total_BLR_Achievement__c</fullName>
    <formula>((FFF_BLR_Achievement__c + FFE_BLR_Achievement__c + FFP_BLR_Achievement__c )/3)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total BLR Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>