force-app/main/default/objects/Employee_KRA__c/fields/Total_MM_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Total_MM_Achievement__c</fullName>
    <formula>((FFE_MM_Achievement__c + FFF_MM_Achievement__c + FFP_MM_Achievement__c)/3)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MM Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>