force-app/main/default/objects/Employee_KRA__c/fields/Total_MM_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_MM_Target__c</fullName>
    <formula>((FFP_MM_Target__c + FFE_MM_Target__c + FFF_MM_Target__c )/3)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total MM Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>