force-app/main/default/objects/Employee_KRA__c/fields/Total_Target__c.field-meta.xml
<CustomField>
    <fullName>Total_Target__c</fullName>
    <formula>FFF_Target__c+FFP_Target__c+FFE_Target__c+Research_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>