force-app/main/default/objects/Employee_KRA__c/recordTypes/Yearly.recordType-meta.xml
<RecordType>
    <fullName>Yearly</fullName>
    <active>true</active>
    <label>Yearly</label>
</RecordType>