force-app/main/default/objects/Employee_KRA__c/validationRules/validation_for_Target_Locked.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_for_Target_Locked</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND(Is_batch_running__c ==false,ISPICKVAL(Status__c,&apos;Approved&apos;)), true, false)</errorConditionFormula>
    <errorMessage>Target are locked now you can&apos;t change that !!</errorMessage>
</ValidationRule>